v0.13.1:feat Melhoria no emailValidator e em cadastrar fornecedores